grammar.js
        source_file: ($) => repeat($.statement),

        // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
        // Taken from tree-sitter-prolog
        single_comment: ($) => token(choice(seq('%', /[^*]/, /.*/), '%')),
        multi_comment: ($) => token(seq('%*', /[^*]*\*+([^%*][^*]*\*+)*/, '%')),

        // token
        dec: ($) => choice('0', /([1-9][0-9]*)/),
        identifier: ($) =>
            token(seq(repeat('_'), /[a-z']/, repeat(/[A-Za-z0-9_']/))),
        //Introduced to disallow white space after identifier followed by a bracket ie. not 'bla ()' but 'bla()'
        _widentifier: ($) =>
            seq($.identifier, alias(token.immediate('('), $.LPAREN)),

        constterm: ($) =>
            choice(
                prec.left(7, seq($.constterm, $.XOR, $.constterm)),
                prec.left(6, seq($.constterm, $.QUESTION, $.constterm)),
                prec.left(5, seq($.constterm, $.AND, $.constterm)),
                prec.left(4, seq($.constterm, $.ADD, $.constterm)),
                prec.left(4, seq($.constterm, $.SUB, $.constterm)),
                prec.left(3, seq($.constterm, $.MUL, $.constterm)),
                prec.left(3, seq($.constterm, $.SLASH, $.constterm)),
                prec.left(3, seq($.constterm, $.MOD, $.constterm)),
                prec.right(2, seq($.constterm, $.POW, $.constterm)),
                prec.left(1, seq($.SUB, $.constterm)),
                prec.left(1, seq($.BNOT, $.constterm)),
                seq($.LPAREN, $.RPAREN),
                seq($.LPAREN, $.consttermvec, $.RPAREN),
                seq($.LPAREN, $.consttermvec, $.COMMA, $.RPAREN),
                seq($._widentifier, $.RPAREN),
                seq($._widentifier, $.constargvec, $.RPAREN),
                seq($.AT, $._widentifier, $.RPAREN),
                seq($.AT, $._widentifier, $.constargvec, $.RPAREN),
                seq($.VBAR, $.constterm, $.VBAR),
                $.identifier,
                seq($.AT, $.identifier),
                $.NUMBER,
                $.STRING,
                $.INFIMUM,
                $.SUPREMUM
            ),

        term: ($) =>
            choice(
                prec.left(8, seq($.term, $.DOTS, $.term)),
                prec.left(7, seq($.term, $.XOR, $.term)),
                prec.left(6, seq($.term, $.QUESTION, $.term)),
                prec.left(5, seq($.term, $.AND, $.term)),
                prec.left(4, seq($.term, $.ADD, $.term)),
                prec.left(4, seq($.term, $.SUB, $.term)),
                prec.left(3, seq($.term, $.MUL, $.term)),
                prec.left(3, seq($.term, $.SLASH, $.term)),
                prec.left(3, seq($.term, $.MOD, $.term)),
                prec.right(2, seq($.term, $.POW, $.term)),
                prec.left(1, seq($.SUB, $.term)),
                prec.left(1, seq($.BNOT, $.term)),
                seq($.LPAREN, $.RPAREN),
                seq($.LPAREN, $.tuplevec, $.RPAREN),
                seq($._widentifier, $.RPAREN),
                seq($._widentifier, $.argvec, $.RPAREN),
                seq($.AT, $._widentifier, $.RPAREN),
                seq($.AT, $._widentifier, $.argvec, $.RPAREN),
                seq($.VBAR, $.unaryargvec, $.VBAR),
                $.identifier,
                seq($.AT, $.identifier),
                $.NUMBER,
                $.STRING,
                $.INFIMUM,
                $.SUPREMUM,
                $.VARIABLE,
                $.ANONYMOUS
            ),

        termvec: ($) => prec.left(seq($.term, repeat(seq($.COMMA, $.term)))),
        //termvec: ($) => choice($.term, seq($.termvec, $.COMMA, $.term)),

        argvec: ($) => prec.left(seq($.termvec, repeat(seq($.SEM, $.termvec)))),
        //choice($.termvec, seq($.argvec, $.SEM, $.termvec)),

        atom: ($) =>
            choice(
                $.identifier,
                seq($._widentifier, $.RPAREN),
                seq($._widentifier, $.argvec, $.RPAREN),
                seq($.SUB, $.identifier),
                seq($.SUB, $._widentifier, $.RPAREN),
                seq($.SUB, $._widentifier, $.argvec, $.RPAREN)
            ),

        literal: ($) =>
            choice(
                $.TRUE,
                seq($.NOT, $.TRUE),
                seq($.NOT, $.NOT, $.TRUE),
                $.FALSE,
                seq($.NOT, $.FALSE),
                seq($.NOT, $.NOT, $.FALSE),
                $.atom,
                seq($.NOT, $.atom),
                seq($.NOT, $.NOT, $.atom),
                seq($.term, $.cmp, $.term),
                seq($.NOT, $.term, $.cmp, $.term),
                seq($.NOT, $.NOT, $.term, $.cmp, $.term),
                $.csp_literal
            ),

        termvec: ($) => prec.left(seq($.term, repeat(seq($.COMMA, $.term)))),
        //termvec: ($) => choice($.term, seq($.termvec, $.COMMA, $.term)),

        luheadaggregate: ($) =>
            choice(
                seq($.term, $.headaggregate),
                seq($.term, $.headaggregate, $.upper),
                seq($.term, $.cmp, $.headaggregate),
                seq($.term, $.cmp, $.headaggregate, $.upper),
                seq($.headaggregate),
                seq($.headaggregate, $.upper),
                $.theory_atom
            ),

        bodydot: ($) =>
            choice(
                seq($.literal, $.DOT),
                seq($.bodycomma, $.literal, $.DOT),
                seq($.lubodyaggregate, $.DOT),
                seq($.bodycomma, $.lubodyaggregate, $.DOT),
                seq($.NOT, $.lubodyaggregate, $.DOT),
                seq($.bodycomma, $.NOT, $.lubodyaggregate, $.DOT),
                seq($.NOT, $.NOT, $.lubodyaggregate, $.DOT),
                seq($.bodycomma, $.NOT, $.NOT, $.lubodyaggregate, $.DOT),
                seq($.conjunction, $.DOT),
                seq($.bodycomma, $.conjunction, $.DOT),
                seq($.disjoint, $.DOT),
                seq($.bodycomma, $.disjoint, $.DOT)
            ),

        head: ($) => choice($.literal, $.disjunction, $.luheadaggregate),

        statement: ($) =>
            choice(
                seq($.head, $.DOT),
                seq($.head, $.IF, $.DOT),
                seq($.head, $.IF, $.bodydot),
                seq($.IF, $.bodydot),
                seq($.IF, $.DOT),
                seq($.disjoint, $.IF, $.bodydot),
                seq($.disjoint, $.IF, $.DOT),
                seq($.disjoint, $.DOT),
                seq($.WIF, $.bodydot, $.LBRACK, $.optimizeweight, $.RBRACK),
                seq(
                    $.WIF,
                    $.bodydot,
                    $.LBRACK,
                    $.optimizeweight,
                    $.optimizetuple,
                    $.RBRACK
                ),
                seq($.MINIMIZE, $.LBRACE, $.RBRACE, $.DOT),
                seq($.MAXIMIZE, $.LBRACE, $.RBRACE, $.DOT),
                seq($.MINIMIZE, $.LBRACE, $.minelemlist, $.RBRACE, $.DOT),
                seq($.MAXIMIZE, $.LBRACE, $.maxelemlist, $.RBRACE, $.DOT),
                prec(8, seq($.SHOW, $.identifier, $.SLASH, $.NUMBER, $.DOT)),
                prec(
                    8,
                    seq($.SHOW, $.SUB, $.identifier, $.SLASH, $.NUMBER, $.DOT)
                ),
                seq($.SHOW, $.DOT),
                seq($.SHOW, $.term, $.COLON, $.bodydot),
                seq($.SHOW, $.term, $.DOT),
                prec(
                    8,
                    seq($.SHOW, $.CSP, $.identifier, $.SLASH, $.NUMBER, $.DOT)
                ),
                seq($.SHOW, $.CSP, $.term, $.COLON, $.bodydot),
                seq($.SHOW, $.CSP, $.term, $.DOT),
                seq($.DEFINED, $.identifier, $.SLASH, $.NUMBER, $.DOT),
                seq($.DEFINED, $.SUB, $.identifier, $.SLASH, $.NUMBER, $.DOT),
                seq($.EDGE, $.LPAREN, $.binaryargvec, $.RPAREN, $.bodyconddot),
                seq(
                    $.HEURISTIC,
                    $.atom,
                    $.bodyconddot,
                    $.LBRACK,
                    $.term,
                    $.AT,
                    $.term,
                    $.COMMA,
                    $.term,
                    $.RBRACK
                ),
                seq(
                    $.HEURISTIC,
                    $.atom,
                    $.bodyconddot,
                    $.LBRACK,
                    $.term,
                    $.COMMA,
                    $.term,
                    $.RBRACK
                ),
                seq($.PROJECT, $.identifier, $.SLASH, $.NUMBER, $.DOT),
                seq($.PROJECT, $.SUB, $.identifier, $.SLASH, $.NUMBER, $.DOT),
                seq($.PROJECT, $.atom, $.bodyconddot),
                seq($.CONST, $.identifier, $.EQ, $.constterm, $.DOT),
                seq(
                    $.CONST,
                    $.identifier,
                    $.EQ,
                    $.constterm,
                    $.DOT,
                    $.LBRACK,
                    $.DEFAULT,
                    $.RBRACK
                ),
                seq(
                    $.CONST,
                    $.identifier,
                    $.EQ,
                    $.constterm,
                    $.DOT,
                    $.LBRACK,
                    $.OVERRIDE,
                    $.RBRACK
                ),
                seq($.SCRIPT, $.LPAREN, $.identifier, $.RPAREN, $.CODE, $.DOT),
                seq($.INCLUDE, $.STRING, $.DOT),
                seq($.INCLUDE, $.LT, $.identifier, $.GT, $.DOT),
                seq($.BLOCK, $.identifier, $.LPAREN, $.RPAREN, $.DOT),
                seq($.BLOCK, $.identifier, $.LPAREN, $.idlist, $.RPAREN, $.DOT),
                seq($.BLOCK, $.identifier, $.DOT),
                seq($.EXTERNAL, $.atom, $.COLON, $.bodydot),
                seq($.EXTERNAL, $.atom, $.COLON, $.DOT),
                seq($.EXTERNAL, $.atom, $.DOT),
                seq(
                    $.EXTERNAL,
                    $.atom,
                    $.COLON,
                    $.bodydot,
                    $.LBRACK,
                    $.term,
                    $.RBRACK
                ),
                seq(
                    $.EXTERNAL,
                    $.atom,
                    $.COLON,
                    $.DOT,
                    $.LBRACK,
                    $.term,
                    $.RBRACK
                ),
                seq($.EXTERNAL, $.atom, $.DOT, $.LBRACK, $.term, $.RBRACK),
                seq($.THEORY, $.theory_identifier, $.LBRACE, $.RBRACE, $.DOT),
                seq(
                    $.THEORY,
                    $.theory_identifier,
                    $.LBRACE,
                    $.theory_definition_nlist,
                    $.RBRACE,
                    $.DOT
                )
            ),

        optimizeweight: ($) => choice(seq($.term, $.AT, $.term), $.term),

        optimizelitvec: ($) =>
            choice($.literal, seq($.optimizelitvec, $.COMMA, $.literal)),

        optimizecond: ($) => choice(seq($.COLON, $.optimizelitvec), $.COLON),

        maxelemlist: ($) =>
            choice(
                seq($.optimizeweight),
                seq($.optimizeweight, $.optimizecond),
                seq($.optimizeweight, $.optimizetuple),
                seq($.optimizeweight, $.optimizetuple, $.optimizecond),
                seq($.maxelemlist, $.SEM, $.optimizeweight),
                seq($.maxelemlist, $.SEM, $.optimizeweight, $.optimizecond),
                seq($.maxelemlist, $.SEM, $.optimizeweight, $.optimizetuple),
                seq(
                    $.maxelemlist,
                    $.SEM,
                    $.optimizeweight,
                    $.optimizetuple,
                    $.optimizecond
                )
            ),

        minelemlist: ($) =>
            choice(
                seq($.optimizeweight),
                seq($.optimizeweight, $.optimizecond),
                seq($.optimizeweight, $.optimizetuple),
                seq($.optimizeweight, $.optimizetuple, $.optimizecond),
                seq($.minelemlist, $.SEM, $.optimizeweight),
                seq($.minelemlist, $.SEM, $.optimizeweight, $.optimizecond),
                seq($.minelemlist, $.SEM, $.optimizeweight, $.optimizetuple),
                seq(
                    $.minelemlist,
                    $.SEM,
                    $.optimizeweight,
                    $.optimizetuple,
                    $.optimizecond
                )
            ),

        theory_identifier: ($) => $.identifier,

        theory_op: ($) => choice($.THEORY_OP, $.NOT),

        theory_term: ($) =>
            choice(
                seq($.LBRACE, $.RBRACE),
                seq($.LBRACE, $.theory_opterm_nlist, $.RBRACE),
                seq($.LBRACK, $.RBRACK),
                seq($.LBRACK, $.theory_opterm_nlist, $.RBRACK),
                seq($.LPAREN, $.RPAREN),
                seq($.LPAREN, $.theory_opterm, $.RPAREN),
                seq($.LPAREN, $.theory_opterm, $.COMMA, $.RPAREN),
                seq(
                    $.LPAREN,
                    $.theory_opterm,
                    $.COMMA,
                    $.theory_opterm_nlist,
                    $.RPAREN
                ),
                seq($.identifier, $.LPAREN, $.RPAREN),
                seq($.identifier, $.LPAREN, $.theory_opterm_nlist, $.RPAREN),
                $.identifier,
                $.NUMBER,
                $.STRING,
                $.INFIMUM,
                $.SUPREMUM,
                $.VARIABLE
            ),

        theory_opterm: ($) =>
            choice(
                seq($.theory_opterm, $.theory_op_list, $.theory_term),
                seq($.theory_op_list, $.theory_term),
                $.theory_term
            ),

        theory_opterm_nlist: ($) =>
            choice(
                seq($.theory_opterm_nlist, $.COMMA, $.theory_opterm),
                $.theory_opterm
            ),

        theory_atom_element: ($) =>
            choice(
                seq($.theory_opterm_nlist),
                seq($.theory_opterm_nlist, $.optcondition),
                seq($.COLON),
                seq($.COLON, $.litvec)
            ),

        theory_atom_element_nlist: ($) =>
            choice(
                seq($.theory_atom_element_nlist, $.SEM, $.theory_atom_element),
                $.theory_atom_element
            ),

        theory_atom_name: ($) =>
            choice(
                $.identifier,
                seq($._widentifier, $.RPAREN),
                seq($._widentifier, $.argvec, $.RPAREN)
            ),

        theory_atom: ($) =>
            choice(
                seq($.AND, $.theory_atom_name),
                seq($.AND, $.theory_atom_name, $.LBRACE, $.RBRACE),
                seq(
                    $.AND,
                    $.theory_atom_name,
                    $.LBRACE,
                    $.theory_atom_element_nlist,
                    $.RBRACE
                ),
                seq(
                    $.AND,
                    $.theory_atom_name,
                    $.LBRACE,
                    $.RBRACE,
                    $.theory_op,
                    $.theory_opterm
                ),
                seq(
                    $.AND,
                    $.theory_atom_name,
                    $.LBRACE,
                    $.theory_atom_element_nlist,
                    $.RBRACE,
                    $.theory_op,
                    $.theory_opterm
                )
            ),

        theory_operator_nlist: ($) =>
            choice(
                $.theory_op,
                seq($.theory_operator_nlist, $.COMMA, $.theory_op)
            ),

        theory_operator_definition_nlist: ($) =>
            choice(
                $.theory_operator_definition,
                seq(
                    $.theory_operator_definition_nlist,
                    $.SEM,
                    $.theory_operator_definition
                )
            ),

        theory_atom_type: ($) => choice($.HEAD, $.BODY, $.ANY, $.DIRECTIVE),
